# mov-voicecrop

./: .env.example  .gitignore  LICENSE  README.md  README_en.md  main.py  pyproject.toml
scripts/: setup_whisper.sh
src/mov_voicecrop/: __init__.py  cli.py  config.py  exporter_fcpxml.py  exporter_mp4.py  exporter_srt.py  media_info.py  segment_analyzer.py  silence_detector.py  transcriber.py  webui.py
